--- a/home.html
+++ b/home.html
@@ -1,53 +1,31 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>홈</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-
-        nav {
-            background-color: #333;
-            overflow: hidden;
-        }
-
-        nav a {
-            float: left;
-            display: block;
-            color: white;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-            cursor: pointer;
-        }
-
-        nav a:hover {
-            background-color: #ddd;
-            color: black;
-        }
-
-        #content {
-            padding: 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="sty.css">
+    <title>IT제 취업해</title>
 </head>
 <body>
+    <div class="container"> 
+        <div class="header">
+            <h1><a>COMPANY</a></h1>
+            <div class="nav">
+                <ul>
+                    <li><a href="home.html">홈</a></li>
+                    <li><a href="introduction.html">소개</a></li>
+                    <li><a href="companies.html">기업별</a></li>
+                    <li><a href="zone.html">지역별</a></li>
+                    <li><a href="contact.html">더보기</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="hero">
+            <h2>취업걱정NO</h2>
+            <p>취업 하나 보고 대학에 들어온 여러분을 위한 걱정을 <br>덜어주기 위해 찾아왔습니다.</p>
+            <button>클릭</button>
+        </div>   
 
-    <nav>
-        <a href="home.html" target="_blank">홈</a>
-        <a href="jobs.html" target="_blank">취업정보</a>
-        <a href="companies.html" target="_blank">기업정보</a>
-        <a href="resources.html" target="_blank">자료실</a>
-        <a href="contact.html" target="_blank">연락처</a>
-    </nav>
-
-    <h1> 홈 페이지 입니다. </h1>
-    
 </body>
 </html>
+
