--- a/introduction.html
+++ b/introduction.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="companies.css">
+    <link rel="stylesheet" href="introduction.css">
     <title>IT제 취업해</title>
 </head>
 <body>
     <div class="container"> 
         <div class="header">
-            <h1><a>COMPANY</a></h1>
+            <h1><a href="#">COMPANY</a></h1>
             <div class="nav">
                 <ul>
                     <li><a href="assets.html">홈</a></li>
@@ -20,8 +20,11 @@
                 </ul>
             </div>
         </div>
- 
-
+        <main>
+            <article class="intro">
+                <
+            </article>
+        </main>
+    </div>
 </body>
 </html>
-
