--- a/zone.html
+++ b/zone.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="companies.css">
+    <link rel="stylesheet" href="zone.css">
     <title>IT제 취업해</title>
 </head>
 <body>
@@ -20,7 +20,6 @@
                 </ul>
             </div>
         </div>
- 
 
 </body>
 </html>
