--- a/introduction.html
+++ b/introduction.html
@@ -12,7 +12,7 @@
             <h1><a href="#">COMPANY</a></h1>
             <div class="nav">
                 <ul>
-                    <li><a href="assets.html">홈</a></li>
+                    <li><a href="home.html">홈</a></li>
                     <li><a href="introduction.html">소개</a></li>
                     <li><a href="companies.html">기업별</a></li>
                     <li><a href="zone.html">지역별</a></li>
