--- a/introduction.html
+++ b/introduction.html
@@ -1,30 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="introduction.css">
-    <title>IT제 취업해</title>
-</head>
-<body>
-    <div class="container"> 
-        <div class="header">
-            <h1><a href="#">COMPANY</a></h1>
-            <div class="nav">
-                <ul>
-                    <li><a href="home.html">홈</a></li>
-                    <li><a href="introduction.html">소개</a></li>
-                    <li><a href="companies.html">기업별</a></li>
-                    <li><a href="zone.html">지역별</a></li>
-                    <li><a href="contact.html">더보기</a></li>
-                </ul>
-            </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>IT제 취업해-소개</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
+  </head>
+  <body>
+    <header class="header">
+      <a href="home.html" class="logo"
+        ><img src="images/logo.png" width="200px" height="60px" alt=""
+      /></a>
+      <nav class="navbar">
+        <a href="home.html">홈</a>
+        <a href="introduction.html">소개</a>
+        <a href="companies.html">기업별</a>
+        <a href="contact.html">지역별</a>
+        <a href="cart.html">마이페이지</a>
+      </nav>
+      <div class="icon">
+        <a href="login.html">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="20"
+            height="20"
+            fill="currentColor"
+            class="bi bi-person-circle"
+            viewBox="0 0 16 16"
+          >
+            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
+            <path
+              fill-rule="evenodd"
+              d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"
+            />
+          </svg>
+        </a>
+      </div>
+    </header>
+
+    <!-- 각자 정보들 추가 -->
+    <section class="about">
+      <h1><span>IT</span>제 취업해</h1>
+      <div class="container">
+        <div class="content">
+          <h3>취업걱정이 많은 우리 고학번</h3>
+          <p>
+            이 프로젝트는 취업 구인구직 웹사이트 개발을 위해 만들어진 test
+            사이트 입니다. 
+            <p>여기에 있는 정보는 잡플래닛 & 사람인 사이트를 참고로
+            만들었으며 해당 기업에 대한 자세한 채용정보는 말씀드리기 힘든 점 양해부탁드립니다.
+          </p>
+        </p>
         </div>
-        <main>
-            <article class="intro">
-                <
-            </article>
-        </main>
-    </div>
-</body>
+      </div>
+      <div class="text">
+        <h2>함께 했어요!</h2>
+        <p>김명지 21학번 컴퓨터공학과</p>
+        <p>김혜정 21학번 컴퓨터공학과</p>
+        <p>윤선아 21학번 컴퓨터공학과</p>
+      </div>
+    </section>
+
+    <!-- 수정 완 -->
+    <footer class="footer">
+        <div class="box-container">
+          <div class="box">
+            <h3>빠른 메뉴</h3>
+            <a href="home.html">홈</a>
+            <a href="introduction.html">소개</a>
+            <a href="companies.html">기업별</a>
+            <a href="contact.html">지역별</a>
+            <a href="cart.html">마이페이지</a>
+          </div>
+          <div class="box">
+            <h3>소셜미디어</h3>
+            <a href="#">facebook</a>
+            <a href="#">instagram</a>
+            <a href="#">youtube</a>
+          </div>
+          <div class="box">
+            <h3>문의</h3>
+            <a href="#">phone: 0654325678</a>
+            <a href="#">email: omaimaaouane@gmail.com</a>
+            <a href="#">address: morocco, casablanca-567890</a>
+          </div>
+        </div>
+    </footer>
+  </body>
 </html>
